--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -1,14 +1,11 @@
 
 body{
-    font-family: Verdana;
+    font-family: Lucida Grande;
     font-size: 12px;
-
-
 }
 
-
 .dropdown-menu{
-    font-family: verdana, sans-serif;
+    font-family: Lucida Grande;
     font-size: 12px;
 }
 .footer {
@@ -17,4 +14,14 @@ body{
     width: 100%;
     height: 40px;
     background-color: #F5F5F5;
+}
+
+.side
+{
+    height: 100vh;
+}
+
+.dropdown-menu
+{
+    width: 100%;
 }
