--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -1,13 +1,13 @@
-
 body{
-    font-family: Lucida Grande;
-    font-size: 12px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
 }
 
-.dropdown-menu{
-    font-family: Lucida Grande;
-    font-size: 12px;
+.navbar-default .navbar-brand
+{
+    color: #FFFFFF;
 }
+
 .footer {
     position: absolute;
     bottom: 0px;
@@ -16,12 +16,40 @@ body{
     background-color: #F5F5F5;
 }
 
-.side
-{
-    height: 100vh;
+
+#page-wrapper {
+    position: relative;
+    background-color: #e4e9f0;
+    color: #444444;
+    padding-top: 1%;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-.dropdown-menu
-{
-    width: 100%;
+.bar{
+    background-color: #1ab394;
+    border: none;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
+
+.sidebar
+{
+    background-color: #ffffff;
+    border-color: #0d524c;
+}
+
+a{
+    color: #979797;
+}
+
+.fa{
+    color:#000000;
+}
+.page-header{
+    color: #ffffff;
+    text-shadow: 2px 2px grey;
+
+}
+
