--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -1,7 +1,13 @@
 body{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
+    font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 13px;
+    font-weight: 400 ;
 }
+
+.dropdown-menu{
+    font-size: 13px;
+}
+
 
 .navbar-default .navbar-brand
 {
@@ -53,3 +59,21 @@ a{
 
 }
 
+#lightbox .modal-content {
+    display: inline-block;
+    text-align: center;
+}
+
+#lightbox .close {
+    opacity: 1;
+    color: rgb(255, 255, 255);
+    background-color: rgb(25, 25, 25);
+    padding: 5px 8px;
+    border-radius: 30px;
+    border: 2px solid rgb(255, 255, 255);
+    position: absolute;
+    top: -15px;
+    right: -55px;
+
+    z-index:1032;
+}
