--- a/public/web/css/styles.css
+++ b/public/web/css/styles.css
@@ -992,8 +992,7 @@ label.label-focus {
   width: 18px;
   margin: 2px 0;
 }
-ul.slimmenu {
-  list-style: none;
+ul.slimmenu {list-style: none;
   margin: 0;
   padding: 0;
   width: 100%;
@@ -11013,12 +11012,31 @@ img.mfp-img {
   color: #335E11 !important;
 }
 
+@media (max-width: 995px) {
+  ul.slimmenu {
+    position: absolute;
+    background-color: white;
+  }
+}
+
 @media (max-width: 768px) {
   .btn-noticia{
     position: inherit;
     margin-top: 15px;
     float:right;
+    width: 80% !important;
   }
+
+  .post .post-desciption,.post .post-desciption + div  {
+    margin-left:0;
+    width:100%;
+  }
+
+  .post .post-meta{
+    text-align:center;
+  }
+
+
 }
 
 
