reemplazo de imagenes por html y css en vista 'principal'

--- a/public/assets/web/style.css
+++ b/public/assets/web/style.css
@@ -3576,3 +3576,72 @@ blockquote {
     width: 100% !important;
     bottom: 0px !important;
 }
+
+
+.categoria-container{
+    border-bottom-left-radius: 10px;
+    border-top-left-radius: 10px;
+    background: white;
+    border-top-width: 4px;
+    border-left-width: 4px;
+    border-bottom-width: 4px;
+    border-bottom-style: solid;
+    border-left-style: solid;
+    border-top-style: solid;
+    margin: auto;
+    overflow: hidden;
+}
+
+.categoria-container-xs{
+    border-bottom-left-radius: 5px;
+    border-top-left-radius: 5px;
+    background: white;
+    border-top-width: 2px;
+    border-left-width: 2px;
+    border-bottom-width: 2px;
+    border-bottom-style: solid;
+    border-left-style: solid;
+    border-top-style: solid;
+    margin: auto;
+    overflow: hidden;
+}
+
+.titulo-categoria{
+    width: 600px;
+    height: 70px;
+}
+
+.titulo-categoria-xs{
+    width: 201px;
+    height:38px;
+}
+
+.color-top{
+    width:100%;
+    height: 30%;
+}
+
+.color-bottom{
+    width:100%;
+    height:60%;
+    margin-top:1%;
+}
+
+.categoria-container-xs .color-bottom{
+    margin-top:0;
+    height:70%;
+}
+
+.color-bottom>h2{
+    text-align: center;
+    color:white !important;
+    margin:0;
+    padding:5px;
+    font-weight: 500;
+}
+
+.titulo-categoria-xs .color-bottom>h2{
+    font-size:1.3em;
+    line-height: 0;
+    text-align:left;
+}
