--- a/public/assets/web/style.css
+++ b/public/assets/web/style.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: 'Conv_HANDGOTL';
+    src: url('../fonts/HANDGOTL.eot');
+    src: local('?'), url('../fonts/HANDGOTL.woff') format('woff'), url('../fonts/HANDGOTL.ttf') format('truetype'), url('fonts/HANDGOTL.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 /* CSS INFORMATION
     - Project: PunicPress
     - Version: 1.2
@@ -3638,10 +3646,12 @@ blockquote {
     margin:0;
     padding:5px;
     font-weight: 500;
+    font-family: 'Conv_HANDGOTL';
 }
 
 .titulo-categoria-xs .color-bottom>h2{
     font-size:1.3em;
     line-height: 0;
     text-align:left;
+    font-family: 'Conv_HANDGOTL';
 }
