--- a/public/assets/web/style.css
+++ b/public/assets/web/style.css
@@ -3611,6 +3611,8 @@ blockquote {
     border-left-style: solid;
     border-top-style: solid;
     margin: auto;
+    position:relative;
+    overflow: hidden;
 }
 
 .titulo-categoria{
@@ -3634,7 +3636,13 @@ blockquote {
 
 .categoria-container-xs .color-bottom{
     margin-top:0;
-    height:auto;
+    height:64%;
+    margin-top:7%;
+}
+
+.categoria-container-xs .color-top{
+    position:absolute;
+    top:0;
 }
 
 .color-bottom>h2{
@@ -3647,7 +3655,10 @@ blockquote {
 }
 
 .titulo-categoria-xs .color-bottom>h2{
-    font-size:1em;
+    font-size:.7em;
     text-align:left;
     font-family: 'Conv_HANDGOTL';
+    padding:0;
+    padding-left:5px;
+    line-height: 1.7em;
 }
