--- a/public/assets/web/style.css
+++ b/public/assets/web/style.css
@@ -3662,3 +3662,28 @@ blockquote {
     padding-left:5px;
     line-height: 1.7em;
 }
+
+.item-galeria{
+    width: 165px;
+    height: 124px;
+    /*border:1px solid #ddd;*/
+    position:relative;
+    border-radius:5px;
+    -moz-box-shadow: 2px 2px 4px 1px rgba(84, 101, 90, 0.58);
+    -webkit-box-shadow: 2px 2px 4px 1px rgba(84, 101, 90, 0.58);
+    box-shadow: 2px 2px 4px 1px rgba(84, 101, 90, 0.58);
+    transition: all 1s;
+}
+
+.item-galeria:hover{
+    transition: all 1s;
+    -moz-box-shadow: 2px 2px 5px 1px rgba(84, 101, 90, 0.2);
+    -webkit-box-shadow: 2px 5px 4px 1px rgba(84, 101, 90, 0.2);
+    box-shadow: 2px 2px 5px 4px rgba(84, 101, 90, 0.2);
+}
+
+.item-galeria{
+    overflow:hidden;
+    width: 163px;
+    height:122px;
+}
