modal de termino y condiciones

--- a/public/assets/web/style.css
+++ b/public/assets/web/style.css
@@ -1,3 +1,4 @@
+
 @font-face {
     font-family: 'Conv_HANDGOTL';
     src: url('../fonts/HANDGOTL.eot');
@@ -3686,4 +3687,22 @@ blockquote {
     overflow:hidden;
     width: 163px;
     height:122px;
+}
+
+.selectEquipos select{
+    width:100%;
+}
+
+.terms{
+    color: #376906;
+    font-family:helvetica;
+    text-decoration: underline !important;
+}
+
+.terms:hover{
+    font-size:auto;
+    font-weight:auto;
+    color: #376906;
+    font-family:helvetica;
+    text-decoration: none !important;
 }
