menu lateral acordeon con js

--- a/public/assets/web/style.css
+++ b/public/assets/web/style.css
@@ -1439,6 +1439,11 @@ a,
     font-size: 11px;
     color: #404040;
 }
+
+.folder-open,.folder-close{
+    cursor:pointer;
+}
+
 .folder-close:before {
     font-family: 'FontAwesome';
     content: "\f114";
