--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -41,7 +41,7 @@ body{
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
 
-.sidebar
+.sidebar_web
 {
     background-color: #ffffff;
     border-color: #0d524c;
