--- a/public/assets/web/style.css
+++ b/public/assets/web/style.css
@@ -1,5 +1,3 @@
-
-
 @font-face {
     font-family: 'Conv_HANDGOTL';
     src: url('../fonts/HANDGOTL.eot');
@@ -3783,7 +3781,13 @@ blockquote {
     font-size: 1.8em;
 }
 
-
+.termsyconds{
+    border:1px solid #ddd;
+    height: 100px;
+    width:100%;
+    overflow:auto;
+    padding: 10px;
+}
 
 
 
