--- a/public/assets/web/css/colorbox.css
+++ b/public/assets/web/css/colorbox.css
@@ -20,8 +20,8 @@
     Change the following styles to modify the appearance of Colorbox.  They are
     ordered & tabbed in a way that represents the nesting of the generated HTML.
 */
-#cboxOverlay{background:url(../images/background/overlay.png) repeat 0 0;}
-#colorbox{outline:0;}
+#cboxOverlay{background:url(../images/background/overlay.png) repeat 0 0;z-index: 99999;}
+#colorbox{outline:0;z-index: 999999;}
     #cboxTopLeft{width:21px; height:21px; background:url(../images/background/controls.png) no-repeat -101px 0;}
     #cboxTopRight{width:21px; height:21px; background:url(../images/background/controls.png) no-repeat -130px 0;}
     #cboxBottomLeft{width:21px; height:21px; background:url(../images/background/controls.png) no-repeat -101px -29px;}
