--- a/public/assets/web/style.css
+++ b/public/assets/web/style.css
@@ -3783,13 +3783,15 @@ blockquote {
 
 .termsyconds{
     border:1px solid #ddd;
-    height: 100px;
-    width:100%;
+    height: 300px;
+    width:110%;
     overflow:auto;
     padding: 10px;
 }
 
-
+.termsyconds h4{
+    text-align: center;
+}
 
 
 
