--- a/public/assets/inspinia/css/style.css
+++ b/public/assets/inspinia/css/style.css
@@ -2425,17 +2425,17 @@ label.error {
   content: "\f00C";
 }
 #toast-container > div {
-  -moz-box-shadow: 0 0 3px #999;
-  -webkit-box-shadow: 0 0 3px #999;
-  box-shadow: 0 0 3px #999;
-  opacity: .9;
-  -ms-filter: alpha(opacity=90);
-  filter: alpha(opacity=90);
+  -moz-box-shadow: 0 0 1px #c9c9c9;
+  -webkit-box-shadow: 0 0 1px #c9c9c9;
+  box-shadow: 0 0 1px #c9c9c9;
+  opacity: .7;
+  -ms-filter: alpha(opacity=70);
+  filter: alpha(opacity=70);
 }
 #toast-container > :hover {
-  -moz-box-shadow: 0 0 4px #999;
-  -webkit-box-shadow: 0 0 4px #999;
-  box-shadow: 0 0 4px #999;
+  -moz-box-shadow: 0 0 1px rgba(210, 210, 210, 0.47);
+  -webkit-box-shadow: 0 0 1px rgba(210, 210, 210, 0.47);
+  box-shadow: 0 0 1px rgba(210, 210, 210, 0.47);
   opacity: 1;
   -ms-filter: alpha(opacity=100);
   filter: alpha(opacity=100);
@@ -4457,7 +4457,6 @@ body.mini-navbar.fixed-sidebar .logo-element {
   padding: 100px 20px 20px 20px;
 }
 .logo-name {
-  color: #e6e6e6;
   font-size: 180px;
   font-weight: 800;
   letter-spacing: -10px;
@@ -8226,4 +8225,20 @@ body.md-skin {
   #page-wrapper {
     margin: 0;
   }
+}
+
+
+.div-profile-image{
+  position: relative;
+  overflow: hidden;
+}
+
+.div-profile-image > img{
+  position: absolute;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+  height: 50px;
+  margin:auto;
 }
