--- a/public/assets/web/css_mas/style.css
+++ b/public/assets/web/css_mas/style.css
@@ -1,4 +1,3 @@
-
 @charset "utf-8";
 /*------------------------------------------------------------------
 [Master Stylesheet]
@@ -6415,4 +6414,14 @@ section:hover .small-item-carousel .owl-next{
 	.multi-columns-row .col-lg-3:nth-child(4n + 5) { clear: left; }
 	.multi-columns-row .col-lg-2:nth-child(6n + 7) { clear: left; }
 	.multi-columns-row .col-lg-1:nth-child(12n + 13) { clear: left; }
+}
+
+.home-text div a{
+    display:block;
+    margin:20px;
+    width:215px;
+}
+
+.home-text div a img{
+    width:100%;
 }
