--- a/public/assets/web/style.css
+++ b/public/assets/web/style.css
@@ -2750,6 +2750,7 @@ a,
     /*padding: 10px 0;*/
     margin: 0 0 10px;
     color: rgba(235, 235, 235, 0.46);
+    text-align: center;
 }
 
 .breadcrumb .active{
