--- a/public/assets/inspinia/css/style.css
+++ b/public/assets/inspinia/css/style.css
@@ -6629,9 +6629,10 @@ body.landing-page {
 }
 
 .landing-page .navbar-default {
-  background-color: #fff;
-  border-color: transparent;
+  border-top: 2px solid rgba(255,255,255,.8) !important;
+  background: url('../../web/img/background.jpg');
   transition: all 0.3s ease-in-out 0s;
+  height:150px;
 }
 .landing-page .navbar-default .nav li a {
   color: #0187CE;
@@ -8279,4 +8280,13 @@ body.md-skin {
 
 .navbar-default .navbar-collapse{
   padding-bottom: 15px;
+}
+
+#inSlider{
+  margin-top:50px;
+  padding-bottom:15px;
+}
+
+.landing-page .navbar-default {
+  border-top: 6px solid rgba(255, 255, 255, .8) !important;
 }
