--- a/public/assets/inspinia/css/style.css
+++ b/public/assets/inspinia/css/style.css
@@ -8290,3 +8290,22 @@ body.md-skin {
 .landing-page .navbar-default {
   border-top: 6px solid rgba(255, 255, 255, .8) !important;
 }
+
+.redes{
+  float:right;
+}
+
+.redes ul li{
+  display:inline-block;
+}
+
+.redes ul li .fa{
+  color: #fff;
+  font-size:30px;
+  margin-left:10px;
+  margin-top:100px;
+}
+
+.buscador{
+  background-color: #0187CE;
+}
